--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,33 @@
-# Logs
+node_modules
+.DS_Store
+dist
+dist-ssr
+dist.zip
+dist.tar
+dist.war
+.nitro
+.output
+*-dist.zip
+*-dist.tar
+*-dist.war
+coverage
+*.local
+**/.vitepress/cache
+.cache
+.turbo
+.temp
+dev-dist
+.stylelintcache
+yarn.lock
+package-lock.json
+.VSCodeCounter
+**/backend-mock/data
+
+# local env files
+.env.local
+.env.*.local
+.eslintcache
+
 logs
 *.log
 npm-debug.log*
@@ -6,43 +35,33 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
+vite.config.mts.*
+vite.config.mjs.*
+vite.config.js.*
+vite.config.ts.*
 
 # Editor directories and files
-.vscode/*
-!.vscode/extensions.json
 .idea
-.DS_Store
+# .vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+.history
 
-# Environment files
-.env
-.env.local
-.env.*.local
-
-# Build cache
-.cache
-.temp
-*.tsbuildinfo
-
-# Test files
-coverage
-.nyc_output
-
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
+# 升级 vben 时需要删除的文件(夹)
+.github
+.vscode
+.changeset
+backend-mock
+web-ele
+web-naive
+docs
+playground
+scripts/deploy/build-local-docker-image.sh
+scripts/deploy/Dockerfile
+.gitpod.yml
+README.*.md
+tea.yaml
+vben-admin.code-workspace
